--- a/src/main/resources/templates/pesquisa/listaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/listaPesquisa.html
@@ -114,7 +114,7 @@
 				  	</div>	
 					  
 					<div class="resultado-itemP">
-						<h6>Data:&emsp;&emsp;</h6><p class="item-atrasado"> &ensp; Pesquisa Encerada</p>
+						<h6>Data:&emsp;&emsp;</h6><p class="item-atrasado"> &ensp; Encerrada</p>
 					</div>
 	
 			  </div>
