--- a/src/main/resources/templates/telainicial/telaInicialSecretaria.html
+++ b/src/main/resources/templates/telainicial/telaInicialSecretaria.html
@@ -1,4 +1,123 @@
 <!DOCTYPE html>
+<html xmlns:th="http://thymeleaf.org">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+  <link rel="stylesheet" href="../../css/page/curso.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+
+  <title>Início Secretaria</title>
+</head>
+
+<body>
+
+  <div class="area">
+    <ul class="circles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
+  <div class="container main-div">
+
+    <nav>
+			<a href="/logout" class="text"> Logout</a>
+	</nav>
+
+
+    <div class="mb-3">
+      <h2>Bem vindo!</h2>
+
+      <h5 class="text">USUÁRIO</h5>
+      <div class="borda">
+
+        <div class="div1">
+          <div class="espaco"></div>
+          <button type="button" onclick="location.href='/cadastro'" class="btn-login">Cadastrar Usuário</button>
+          <div class="espaco"></div>
+          <button type="button" onclick="location.href='/lista/1'" class="btn-login">Listar Usuário</button>
+          <div class="espaco"></div>
+        </div>
+      </div>
+
+      <h5 class="text">PERGUNTA</h5>
+      <div class="borda">
+
+        <div class="div1">
+          <div class="espaco"></div>
+          <button type="button" onclick="location.href='/pergunta/cadastrar'" class="btn-login">Cadastrar Nova
+            Pergunta</button>
+          <div class="espaco"></div>
+          <button type="button" onclick="location.href='/pergunta/listar'" class="btn-login">Listar Perguntas</button>
+          <div class="espaco"></div>
+        </div>
+      </div>
+
+        <h5 class="text">PESQUISA</h5>
+        <div class="borda">
+
+          <div class="div1">
+            <div class="espaco"></div>
+            <button type="button" onclick="location.href='/pesquisa/cadastrar'" class="btn-login">Cadastrar
+              Pesquisa</button>
+            <div class="espaco"></div>
+            <button type="button" onclick="location.href='/pesquisa/listar'" class="btn-login">Listar Pesquisa</button>
+            <div class="espaco"></div>
+          </div>
+        </div>
+
+          <h5 class="text">FORMULÁRIO E RELATÓRIO</h5>
+          <div class="borda">
+
+            <div class="div1">
+              <div class="espaco"></div>
+              <button type="button" onclick="location.href='/resposta/codigoPesquisa'"
+                class="btn-login">Formulário</button>
+              <div class="espaco"></div>
+              <button type="button"
+                onclick="location.href='https://app.powerbi.com/view?r=eyJrIjoiMDk3M2UwYmYtYzNiYi00YzgyLTg2ZjUtYTMwYWUwNmVkZTZhIiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9'"
+                class="btn-login">Gerar Relatório</button>
+              <div class="espaco"></div>
+            </div>
+          </div>
+
+          <h5 class="text">CURSO</h5>
+          <div class="borda">
+
+            <div class="div1">
+              <div class="espaco"></div>
+              <button type="button" onclick="location.href='/curso'" class="btn-login">Cadastrar Curso</button>
+              <div class="espaco"></div>
+              <button type="button" onclick="location.href='/buscarCurso'" class="btn-login">Buscar por Curso</button>
+              <div class="espaco"></div>
+              <button type="button" onclick="location.href='/listaCurso/1'" class="btn-login">Listar Curso</button>
+              <div class="espaco"></div>
+            </div>
+          </div>
+
+
+      </div>
+      <!-- JavaScript Bundle with Popper -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
+<!--  <!DOCTYPE html>
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
@@ -33,4 +152,4 @@
 			<a href="https://app.powerbi.com/view?r=eyJrIjoiMDk3M2UwYmYtYzNiYi00YzgyLTg2ZjUtYTMwYWUwNmVkZTZhIiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9" style="margin: 0 40px 0 60px" >Média</a>	
 		</div>
 </body>
-</html>
+</html>-->
