--- a/src/main/resources/templates/telainicial/telaInicialDocencia.html
+++ b/src/main/resources/templates/telainicial/telaInicialDocencia.html
@@ -1,10 +1,151 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
+<head>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- Favicon -->
+<link rel="apple-touch-icon" sizes="180x180"
+	href="../img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32"
+	href="../img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16"
+	href="../img/favicon-16x16.png">
+
+<link rel="stylesheet" href="../../css/page/lista.css" />
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+<!-- CSS only -->
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+	crossorigin="anonymous">
+
+<title>Início Docência</title>
+</head>
+
+<body>
+	<div class="area" id="primeiro">
+		<ul class="circles">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>
+	<div class="container main-div">
+
+		<nav>
+			<a href="/logout" class="text"> Logout</a>
+		</nav>
+
+		<h2>Bem vindo!</h2>
+
+		<div class="mb-3">
+			<div class="div1">
+				<button type="button"
+					onclick="location.href='/resposta/codigoPesquisa'"
+					class="btn-login">Formulário</button>
+				<button type="button" onclick="location.href='#pesquisa'"
+					class="btn-login">Lista - Pesquisa</button>
+			</div>
+		</div>
+	</div>
+	<h1 id="pesquisa" class="text">LISTA - PESQUISA</h1>
+
+
+
+	<table class="tabelas" id="customers">
+		<thead>
+			<tr>
+
+				<th class="id">ID</th>
+				<th class="th-height">CURSO</th>
+				<th class="th-height">TURMA</th>
+				<th class="th-height">DATA VENCIMENTO</th>
+				<th class="th-height">JUSTIFICATIVA</th>
+				<th class="">RESPOSTAS</th>
+				<th class=""></th>
+
+			</tr>
+		</thead>
+
+		<tbody id="tb-user">
+			<tr th:each="ps:${pesq}">
+
+				<td th:text="${ps.id}"></td>
+				<td th:text="${ps.curso.descCurso}" />
+				<td th:text="${ps.turma}" />
+				<td th:text="${ps.dataVencimento}" />
+				<td
+					th:text="${ps.justificativa ? 'justificativa pendente, acesse a lista de respostas para responder' : 'nenhuma justificativa pendente'}" />
+				<td><a th:href="@{/pesquisa/listarResposta(id=${ps.id})}">Lista
+						de Respostas</a></td>
+				<td
+					th:style="${ps.justificativa} ? 'background-color: #d55d92' : 'background-color: #3745a4'" />
+
+			</tr>
+
+		</tbody>
+	</table>
+	
+	  <div th:if="${pesq.empty}"
+        style="margin-left: auto; margin-right: auto; ">
+        <p
+            th:style="'font-size:150%; -webkit-margin-before: 0.67em; -webkit-margin-after: 0.67em; -webkit-margin-start: 0px;-webkit-margin-end: 0px; font-weight: 500; max-width: 100px; text-align: center;margin-left: auto; margin-right: auto; '"
+            >Ops! Não há nada nessa lista.</p>
+    </div>
+	
+
+	<nav class="pagination">
+		<ul class="pagination">
+			<li class="page-item"
+				th:class="${pagAtual == 1 ? 'disabled' : 'waves-effect' }"><a
+				class="page-link" th:href="${pagAtual > 1 ? pagAtual - 1 : '#' }">Anterior</a></li>
+			<li class="page-item"
+				th:class="${pagAtual == p ? 'active purple' : 'waves-effect'}"
+				th:each="p:${numPag}"><a class="page-link" th:href="${p}"><span
+					th:text="${p}"></span></a></li>
+			<li class="page-item"
+				th:class="${pagAtual == totalPages ? 'disabled' : 'waves-effect'}"><a
+				class="page-link"
+				th:href="${pagAtual < totalPages ? pagAtual + 1 : '#'}">Próximo</a></li>
+		</ul>
+	</nav>
+
+
+	<div class="ultima">
+		<button type="button" onclick="location.href='#primeiro'"
+			class="btn-login">Voltar para o topo</button>
+	</div>
+	<!-- JavaScript Bundle with Popper -->
+
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+		crossorigin="anonymous"></script>
+</body>
+	
+
+</html>
+
+<!--  <!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<!-- Favicon -->
+
 	<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
@@ -12,7 +153,7 @@
 	<link rel="stylesheet" href="../../css/listas/lista.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-	<!-- CSS only -->
+
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 	<title>Inicio Docência</title>
@@ -71,30 +212,6 @@
 	</ul>
 </nav>
 
-
-<!-- JavaScript Bundle with Popper -->
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
-</html>
-<!--<!DOCTYPE html>-->
-<!--<html lang="pt-br">-->
-<!--<head>-->
-<!--<meta charset="UTF-8">-->
-<!--<title>Início Docente</title>-->
-<!--</head>-->
-
-<!--<body>-->
-
-<!--	<nav>-->
-<!--	<a href="/logout"><i class="material-icons right" style="font-size: 20px">exit_to_app</i></a>-->
-<!--	</nav>-->
-
-<!--	<a href="/pesquisa/listar" style="margin: 0 40px 0 60px">Listar Pesquisa</a>-->
-<!--			-->
-<!--	<a href="/resposta/codigoPesquisa" style="margin: 0 40px 0 60px">Formulario</a>-->
-<!--	-->
-<!--	-->
-<!--	<a href="#" style="margin: 0 40px 0 60px" >Justificar</a>-->
-<!--</body>-->
-<!--</html>-->
+</html>-->
