--- a/src/main/resources/templates/telainicial/telaInicialDiretor.html
+++ b/src/main/resources/templates/telainicial/telaInicialDiretor.html
@@ -60,7 +60,7 @@
 					<button type="button" onclick="location.href='/pergunta/cadastrar'" class="btn-login">Cadastrar Nova
 						Pergunta</button>
 					<div class="espaco"></div>
-					<button type="button" onclick="location.href='/pergunta/listar'" class="btn-login">Listar
+					<button type="button" onclick="location.href='/pergunta/listar/1'" class="btn-login">Listar
 						Perguntas</button>
 					<div class="espaco"></div>
 				</div>
@@ -74,7 +74,7 @@
 					<button type="button" onclick="location.href='/pesquisa/cadastrar'" class="btn-login">Cadastrar
 						Pesquisa</button>
 					<div class="espaco"></div>
-					<button type="button" onclick="location.href='/pesquisa/listar'" class="btn-login">Listar
+					<button type="button" onclick="location.href='/pesquisa/listar/1'" class="btn-login">Listar
 						Pesquisa</button>
 					<div class="espaco"></div>
 				</div>
@@ -101,9 +101,6 @@
 				<div class="div1">
 					<div class="espaco"></div>
 					<button type="button" onclick="location.href='/curso'" class="btn-login">Cadastrar Curso</button>
-					<div class="espaco"></div>
-					<button type="button" onclick="location.href='/buscarCurso'" class="btn-login">Buscar por
-						Curso</button>
 					<div class="espaco"></div>
 					<button type="button" onclick="location.href='/listaCurso/1'" class="btn-login">Listar
 						Curso</button>
