--- a/src/main/resources/templates/telainicial/telaInicialSecretaria.html
+++ b/src/main/resources/templates/telainicial/telaInicialSecretaria.html
@@ -61,7 +61,7 @@
           <button type="button" onclick="location.href='/pergunta/cadastrar'" class="btn-login">Cadastrar Nova
             Pergunta</button>
           <div class="espaco"></div>
-          <button type="button" onclick="location.href='/pergunta/listar'" class="btn-login">Listar Perguntas</button>
+          <button type="button" onclick="location.href='/pergunta/listar/1'" class="btn-login">Listar Perguntas</button>
           <div class="espaco"></div>
         </div>
       </div>
@@ -74,7 +74,7 @@
             <button type="button" onclick="location.href='/pesquisa/cadastrar'" class="btn-login">Cadastrar
               Pesquisa</button>
             <div class="espaco"></div>
-            <button type="button" onclick="location.href='/pesquisa/listar'" class="btn-login">Listar Pesquisa</button>
+            <button type="button" onclick="location.href='/pesquisa/listar/1'" class="btn-login">Listar Pesquisa</button>
             <div class="espaco"></div>
           </div>
         </div>
