--- a/src/main/resources/templates/telainicial/telaInicialDiretor.html
+++ b/src/main/resources/templates/telainicial/telaInicialDiretor.html
@@ -122,7 +122,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
 			crossorigin="anonymous"></script>
-
+<div class="scroll">
 	<div class="tabelas" id="comuns">
 		<table id="customers" border="1">
 			<h5 class="text">ÚLTIMOS COMENTÁRIOS COMUNS JUSTIFICADOS</h5>
@@ -146,7 +146,8 @@
 
 			</tbody>
 		</table>
-	</div>
+	</div></div>
+	<div class="scroll">
 	<div class="tabelas" id="gerais">
 
 		<br>
@@ -171,7 +172,7 @@
 
 			</tbody>
 		</table>
-	</div>
+	</div></div>
 	<div class="ultima">
 		<button type="button" onclick="location.href='#primeiro'" class="btn-login">Voltar para o topo</button>
 	</div>
