--- a/src/main/resources/templates/telainicial/telaInicialDiretor.html
+++ b/src/main/resources/templates/telainicial/telaInicialDiretor.html
@@ -147,6 +147,7 @@
 			</tbody>
 		</table>
 	</div></div>
+<div class="espa"></div>
 	<div class="scroll">
 	<div class="tabelas" id="gerais">
 
@@ -173,6 +174,7 @@
 			</tbody>
 		</table>
 	</div></div>
+	
 	<div class="ultima">
 		<button type="button" onclick="location.href='#primeiro'" class="btn-login">Voltar para o topo</button>
 	</div>
