add lista curso nav

--- a/src/main/resources/templates/curso/listaCurso.html
+++ b/src/main/resources/templates/curso/listaCurso.html
@@ -64,6 +64,7 @@
 					  </a>
 					  <ul class="dropdown-menu">
 						<li><a class="dropdown-item" href="/curso">Cadastrar Curso</a></li>
+						  <li><a class="dropdown-item" href="/pergunta/listar/1">Listar Pergunta</a></li>
 					  </ul>
 					</li>
   
