--- a/src/main/resources/templates/pesquisa/cadPesquisa.html
+++ b/src/main/resources/templates/pesquisa/cadPesquisa.html
@@ -91,6 +91,7 @@
 						</a>
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item" href="/curso">Cadastrar Curso</a></li>
+							<li><a class="dropdown-item" href="/listaCurso/1">Listar Curso</a></li>
 						</ul>
 					</li>
 
