--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -114,7 +114,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/pergunta/cadastrar">Cadastrar Nova Pergunta</a></li>
-                            <li><a class="dropdown-item" href="/pergunta/listar/1">Listar Pergunta</a></li>
+                            <li><a class="dropdown-item" href="/listaCurso/1">Listar Curso</a></li>
                         </ul>
                     </li>
 
