--- a/src/main/resources/templates/curso/curso.html
+++ b/src/main/resources/templates/curso/curso.html
@@ -88,6 +88,7 @@
 						  </a>
 						  <ul class="dropdown-menu">
 							  <li><a class="dropdown-item" href="/curso">Cadastrar Curso</a></li>
+							  <li><a class="dropdown-item" href="/listaCurso/1">Listar Curso</a></li>
 						  </ul>
 					  </li>
 
