--- a/src/main/resources/templates/curso/listaCurso.html
+++ b/src/main/resources/templates/curso/listaCurso.html
@@ -75,7 +75,7 @@
 					  </a>
 					  <ul class="dropdown-menu">
 						<li><a class="dropdown-item" href="/pergunta/cadastrar">Cadastrar Nova Pergunta</a></li>
-						<li><a class="dropdown-item" href="/pergunta/listar/1">Listar Pergunta</a></li>
+						  <li><a class="dropdown-item" href="/listaCurso/1">Listar Curso</a></li>
 					  </ul>
 					</li>
   
