add lista curso nav

--- a/src/main/resources/templates/curso/listaCurso.html
+++ b/src/main/resources/templates/curso/listaCurso.html
@@ -64,8 +64,7 @@
 					  </a>
 					  <ul class="dropdown-menu">
 						<li><a class="dropdown-item" href="/curso">Cadastrar Curso</a></li>
-						  <li><a class="dropdown-item" href="/pergunta/listar/1">Listar Pergunta</a></li>
-					  </ul>
+						  <li><a class="dropdown-item" href="/listaCurso/1">Listar Curso</a></li>					  </ul>
 					</li>
   
 					<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
@@ -75,7 +74,7 @@
 					  </a>
 					  <ul class="dropdown-menu">
 						<li><a class="dropdown-item" href="/pergunta/cadastrar">Cadastrar Nova Pergunta</a></li>
-						  <li><a class="dropdown-item" href="/listaCurso/1">Listar Curso</a></li>
+						<li><a class="dropdown-item" href="/pergunta/listar/1">Listar Pergunta</a></li>
 					  </ul>
 					</li>
   
