--- a/src/main/resources/templates/curso/listaBuscaCurso.html
+++ b/src/main/resources/templates/curso/listaBuscaCurso.html
@@ -7,7 +7,7 @@
 		    <!-- Favicon -->
 			<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
 			<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-			<link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon-16x16.png">
+			<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
 		<link rel="stylesheet" href="../../css/listas/lista.css" />  
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
@@ -15,7 +15,7 @@
 		<!-- CSS only -->
 		
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-		<title>Lista de Pesquisa</title>
+		<title>Lista de Curso</title>
 	  </head>
 <body>
 	<nav class="navbar navbar-dark  fixed-top">
@@ -25,7 +25,7 @@
 				<img class="Logo_kaos "src="../../img/logo-claro.png" alt="">
 			  </div>
 			  
-		  <p class="navbar-brand" style="color: white; font-size:xx-large;" >Lista de Pesquisa</p>
+		  <p class="navbar-brand" style="color: white; font-size:xx-large;" >Lista de Curso</p>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
 			<span class="navbar-toggler-icon"></span>Menu
 		  </button>
@@ -34,8 +34,6 @@
 			<div class="offcanvas-header">
 			  <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
 			  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-			  
- 
 			</div>
 			<div class="offcanvas-body">
 				<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
@@ -48,8 +46,8 @@
 					<li th:if="${session.secretariaLogado} " class="nav-item dropdown">
 						<button class="dropdown-item" aria-current="page" onclick="javascript:location.href='/telaInicialSecretaria'"><i class="material-icons" style="color:white;">home</i></button>
 					</li>
-
-              <li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+				<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+				  
 					  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 						Usuário
 					  </a>
@@ -59,19 +57,18 @@
 					  </ul>
 					</li>
 					
-              <li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
-            
+					<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+  
 					  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 						Curso
 					  </a>
 					  <ul class="dropdown-menu">
 						<li><a class="dropdown-item" href="/curso">Cadastrar Curso</a></li>
-						<li><a class="dropdown-item"  href="/listaCurso/1">Listar Curso</a></li>
-					  </ul>
+						  <li><a class="dropdown-item" href="/listaCurso/1">Listar Curso</a></li>					  </ul>
 					</li>
   
 					<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
-					
+  
 					  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 						Pergunta
 					  </a>
@@ -82,13 +79,13 @@
 					</li>
   
 					<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
-					
+  
 					  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 						Pesquisa
 					  </a>
 					  <ul class="dropdown-menu">
 						<li><a class="dropdown-item" href="/pesquisa/cadastrar">Cadastrar Pesquisa</a></li>
-						
+						<li><a class="dropdown-item" href="/pesquisa/listar/1">Listar Pesquisa</a></li>
 					  </ul>
 					</li>
   
@@ -103,84 +100,40 @@
 		  </div>
 		</div>
 	  </nav>
-	  
-	  			<div class="resultadoP">
-				  	<div class="resultado-itemP" >
-					<h6>Justificativa:&emsp;&emsp;</h6><p class="item-ok"> &ensp; Ok</p>
-					</div>
-
-					<div class="resultado-itemP" >	
-				  		<p class="item-pendente"> &ensp; Pendente</p>	
-				  	</div>	
-					  
-					<div class="resultado-itemP">
-						<h6>Data:&emsp;&emsp;</h6><p class="item-atrasado"> &ensp; Encerrada</p>
-					</div>
-	
-			  </div>
-	<br>
-	<br>
-	<br>
+<h1>Lista de Curso</h1>
 	<div style="margin-top:5%">
-		<form action="/pesquisa/buscaPesquisa">
-			<div>
-				<i class=" prefix material-icons ">search</i>
-				<input id="icon_prefix" type="text" name="turma" class="validate" placeholder="Buscar por turma">
-			</div>
+		<form>
+			<input type="button" value="Voltar para a lista completa" onclick="history.back()">
 		</form>
 	</div>
-
-	<table class="table" >
-		<thead>
-			<tr>
-
-				<th class="id">Código </th>
-				<th class="th-height">Curso</th>
-				<th class="th-height">Turma</th>
-				<th class="th-height">Data Vencimento</th>
-				<th class="th-height" th:if="${session.docenciaLogado} or ${session.diretoriaLogado}">Pendências</th>
-				<th class="th-height">Respostas</th>
-				<th class="th-height"></th>
-			</tr>
-		</thead>
-
-		<tbody id="tb-user" class="table-group-divider" >
-			<tr th:each="ps:${pesq}" scope="row">
-
-				<td th:text="${ps.id}"></td>
-				<td th:text="${ps.curso?.descCurso}"/>
-				<td th:text="${ps.turma}"/>
-				<td th:text="${#dates.format(ps.dataVencimento, 'dd/MM/yyyy')}" th:style="${ps.dataVencimento.after(#dates.createNow())} ? 'color: black' : 'color: #c32f27'" ></td>
-				<td th:if="${session.docenciaLogado}" id="italico" th:text="${ps.justificativa ? 'Justificativa pendente, verifique as respostas' : 'Nenhuma pendência'}"/>
-				<td th:if="${session.diretoriaLogado}" th:text="${ps.justificativa ? 'Contém justificativas solicitadas' : 'Nenhuma pendência'}" style="font-style: italic;"/>
-				<td><a th:if="${ps.listaResposta.size() > 0}" th:text="${ps.listaResposta.size() > 0 ? 'Lista de Respostas' : 'NN'}" type="button" class="btn btn-outline-dark" th:href="@{/pesquisa/listarResposta(id=${ps.id})}" style=" text-decoration: none">Lista de Resposta</a></td>
-					<td th:style="${ps.justificativa} ? 'background-color: #d55d92' : 'background-color: #3745a4'" />
-
-
-
-			</tr>
-
-		</tbody>
-	</table>
-	<div th:if="${pesq.empty}"
-	th:style="'margin-left: auto'; margin ">
-	<p
-		th:style="'font-size:150%; -webkit-margin-before: 0.67em; -webkit-margin-after: 0.67em; -webkit-margin-start: 0px;-webkit-margin-end: 0px; font-weight: 500; max-width: 100px; text-align: center '"
-		th:unlees="${pesq.empty}">Ops! Não há nada nessa lista.</p>
-</div>
-
-	<nav class="pagination">
-		<ul class="pagination">
-		  <li class="page-item" th:class="${pagAtual == 1 ? 'disabled' : 'waves-effect' }"><a class="page-link" th:href="${pagAtual > 1 ? pagAtual - 1 : '#' }">Anterior</a></li>
-		  <li class="page-item" th:class="${pagAtual == p ? 'active purple' : 'waves-effect'}" th:each="p:${numPag}"><a class="page-link" th:href="${p}"><span th:text="${p}"></span></a></li>
-		  <li class="page-item" th:class="${pagAtual == totalPages ? 'disabled' : 'waves-effect'}"><a class="page-link" th:href="${pagAtual < totalPages ? pagAtual + 1 : '#'}">Próximo</a></li>
-		</ul>
-	  </nav>
-
-	  <footer th:replace="fragments/padrao :: rodape"></footer>
+<table class="table">
+<thead>
+  <tr>
+	<th class="id">ID</th>
+	<th class="th-height">Nome</th>
+	<th class="th-height">Tipo de Curso</th>
+	<th class="th-heightC">Alterar</th>
+  </tr>
+</thead>
+<tbody id="tb-user" class="table-group-divider" >
+  <tr th:each="c:${curso}" scope="row">
+	<td th:text="${c.id}" />
+	 <td th:text="${c.descCurso}" />
+	 <td th:text="${c?.tipo}"/>
 	
-	<!-- JavaScript Bundle with Popper -->
+	  <td><a type="button" class="btn btn-outline-dark" th:href="@{/alteraCurso(id=${c.id})}"><i
+		class="material-icons">create</i> </a></td>
+ </tr>
+ 
+</tbody>
+</table>
+	<div th:if="${curso.empty}"
+		 style="margin-left: auto; margin-right: auto; ">
+		<p th:style="'font-size:150%; -webkit-margin-before: 0.67em; -webkit-margin-after: 0.67em; -webkit-margin-start: 0px;-webkit-margin-end: 0px; font-weight: 500; max-width: 100px; text-align: center;margin-left: auto; margin-right: auto; '"
+		>Ops! Nada foi encontrado. Tente fazer uma busca diferente.</p>
+	</div>
 
+<!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
