--- a/src/main/resources/templates/pesquisa/buscaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/buscaPesquisa.html
@@ -122,14 +122,10 @@
 	<br>
 	<br>
 	<div style="margin-top:5%">
-		<form action="/pesquisa/buscaPesquisa">
-			<div>
-				<i class=" prefix material-icons ">search</i>
-				<input id="icon_prefix" type="text" name="turma" class="validate" placeholder="Buscar por turma">
-			</div>
+		<form>
+			<input type="button" value="Voltar para a lista completa" onclick="history.back()">
 		</form>
 	</div>
-
 	<table class="table" >
 		<thead>
 			<tr>
@@ -156,28 +152,15 @@
 				<td><a th:if="${ps.listaResposta.size() > 0}" th:text="${ps.listaResposta.size() > 0 ? 'Lista de Respostas' : 'NN'}" type="button" class="btn btn-outline-dark" th:href="@{/pesquisa/listarResposta(id=${ps.id})}" style=" text-decoration: none">Lista de Resposta</a></td>
 					<td th:style="${ps.justificativa} ? 'background-color: #d55d92' : 'background-color: #3745a4'" />
 
-
-
 			</tr>
 
 		</tbody>
 	</table>
 	<div th:if="${pesq.empty}"
-	th:style="'margin-left: auto'; margin ">
-	<p
-		th:style="'font-size:150%; -webkit-margin-before: 0.67em; -webkit-margin-after: 0.67em; -webkit-margin-start: 0px;-webkit-margin-end: 0px; font-weight: 500; max-width: 100px; text-align: center '"
-		th:unlees="${pesq.empty}">Ops! Não há nada nessa lista.</p>
-</div>
-
-	<nav class="pagination">
-		<ul class="pagination">
-		  <li class="page-item" th:class="${pagAtual == 1 ? 'disabled' : 'waves-effect' }"><a class="page-link" th:href="${pagAtual > 1 ? pagAtual - 1 : '#' }">Anterior</a></li>
-		  <li class="page-item" th:class="${pagAtual == p ? 'active purple' : 'waves-effect'}" th:each="p:${numPag}"><a class="page-link" th:href="${p}"><span th:text="${p}"></span></a></li>
-		  <li class="page-item" th:class="${pagAtual == totalPages ? 'disabled' : 'waves-effect'}"><a class="page-link" th:href="${pagAtual < totalPages ? pagAtual + 1 : '#'}">Próximo</a></li>
-		</ul>
-	  </nav>
-
-	  <footer th:replace="fragments/padrao :: rodape"></footer>
+		 style="margin-left: auto; margin-right: auto; ">
+		<p th:style="'font-size:150%; -webkit-margin-before: 0.67em; -webkit-margin-after: 0.67em; -webkit-margin-start: 0px;-webkit-margin-end: 0px; font-weight: 500; max-width: 100px; text-align: center;margin-left: auto; margin-right: auto; '"
+		>Ops! Nada foi encontrado. Tente fazer uma busca diferente.</p>
+	</div>
 	
 	<!-- JavaScript Bundle with Popper -->
 
