--- a/src/main/resources/templates/pergunta/cadPergunta.html
+++ b/src/main/resources/templates/pergunta/cadPergunta.html
@@ -2,216 +2,228 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="../../css/pesquisa/pesquisa.css" />
-	<link rel="stylesheet" href="../../css/note-response.css" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="../../css/pesquisa/pesquisa.css"/>
+    <link rel="stylesheet" href="../../css/note-response.css"/>
 
-	<!-- CSS only -->
+    <!-- CSS only -->
 
-	<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-			crossorigin="anonymous" />
-	<link
-			href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
-			rel="stylesheet" />
-	<!-- JQuery -->
-	<script
-			src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+            crossorigin="anonymous"/>
+    <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
+            rel="stylesheet"/>
+    <!-- JQuery -->
+    <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-	<link
-			href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
-			rel="stylesheet" />
+    <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
+            rel="stylesheet"/>
 
-	<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
+    <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
 
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-		  rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-		  crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 
-	<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon-16x16.png">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon-16x16.png">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-	<title>Cadastro de Pergunta</title>
+    <title>Cadastro de Pergunta</title>
 </head>
 
 <body>
 <nav class="navbar navbar-dark  fixed-top">
-	<div class="container-fluid">
+    <div class="container-fluid">
 
-		<div>
-			<img class="Logo_kaos "src="../../img/logo-claro.png" alt="">
-		</div>
-		<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
-			<span class="navbar-toggler-icon"></span>Menu
-		</button>
+        <div>
+            <img class="Logo_kaos " src="../../img/logo-claro.png" alt="">
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+                aria-controls="offcanvasDarkNavbar">
+            <span class="navbar-toggler-icon"></span>Menu
+        </button>
 
-		<div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-			<div class="offcanvas-header">
-				<h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
-				<button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-			</div>
-			<div class="offcanvas-body">
-				<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-					<li th:if="${session.docenciaLogado} " class="nav-item dropdown">
-						<button class="dropdown-item" aria-current="page" onclick="javascript:location.href='/telaInicialDocencia'"><i class="material-icons" style="color:white;">home</i></button>
-					</li>
-					<li th:if="${session.diretoriaLogado} " class="nav-item dropdown">
-						<button class="dropdown-item" aria-current="page" onclick="javascript:location.href='/telaInicialDiretor'"><i class="material-icons" style="color:white;">home</i></button>
-					</li>
-					<li th:if="${session.secretariaLogado} " class="nav-item dropdown">
-						<button class="dropdown-item" aria-current="page" onclick="javascript:location.href='/telaInicialSecretaria'"><i class="material-icons" style="color:white;">home</i></button>
-					</li>
-					<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+             aria-labelledby="offcanvasDarkNavbarLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li th:if="${session.docenciaLogado} " class="nav-item dropdown">
+                        <button class="dropdown-item" aria-current="page"
+                                onclick="javascript:location.href='/telaInicialDocencia'"><i class="material-icons"
+                                                                                             style="color:white;">home</i>
+                        </button>
+                    </li>
+                    <li th:if="${session.diretoriaLogado} " class="nav-item dropdown">
+                        <button class="dropdown-item" aria-current="page"
+                                onclick="javascript:location.href='/telaInicialDiretor'"><i class="material-icons"
+                                                                                            style="color:white;">home</i>
+                        </button>
+                    </li>
+                    <li th:if="${session.secretariaLogado} " class="nav-item dropdown">
+                        <button class="dropdown-item" aria-current="page"
+                                onclick="javascript:location.href='/telaInicialSecretaria'"><i class="material-icons"
+                                                                                               style="color:white;">home</i>
+                        </button>
+                    </li>
+                    <li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
 
-						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Usuário
-						</a>
-						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="/cadastro">Cadastrar Usuário</a></li>
-							<li><a class="dropdown-item" href="/lista/1">Listar Usuário</a></li>
-						</ul>
-					</li>
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            Usuário
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/cadastro">Cadastrar Usuário</a></li>
+                            <li><a class="dropdown-item" href="/lista/1">Listar Usuário</a></li>
+                        </ul>
+                    </li>
 
-					<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+                    <li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
 
-						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Curso
-						</a>
-						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="/curso">Cadastrar Curso</a></li>
-							<li><a class="dropdown-item" href="/listaCurso/1">Listar Curso</a></li>
-						</ul>
-					</li>
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            Curso
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/curso">Cadastrar Curso</a></li>
+                            <li><a class="dropdown-item" href="/listaCurso/1">Listar Curso</a></li>
+                        </ul>
+                    </li>
 
-					<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+                    <li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
 
-						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Pergunta
-						</a>
-						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="/pergunta/cadastrar">Cadastrar Nova Pergunta</a></li>
-							<li><a class="dropdown-item" href="/pergunta/listar/1">Listar Pergunta</a></li>
-						</ul>
-					</li>
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            Pergunta
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/pergunta/cadastrar">Cadastrar Nova Pergunta</a></li>
+                            <li><a class="dropdown-item" href="/pergunta/listar/1">Listar Pergunta</a></li>
+                        </ul>
+                    </li>
 
-					<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
+                    <li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
 
-						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Pesquisa
-						</a>
-						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="/pesquisa/cadastrar">Cadastrar Pesquisa</a></li>
-							<li><a class="dropdown-item" href="/pesquisa/listar/1">Listar Pesquisa</a></li>
-						</ul>
-					</li>
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            Pesquisa
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/pesquisa/cadastrar">Cadastrar Pesquisa</a></li>
+                            <li><a class="dropdown-item" href="/pesquisa/listar/1">Listar Pesquisa</a></li>
+                        </ul>
+                    </li>
 
-					<li class="nav-item">
-						<a class="nav-link" href="/resposta/codigoPesquisa">Formulário</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="https://app.powerbi.com/view?r=eyJrIjoiMDk3M2UwYmYtYzNiYi00YzgyLTg2ZjUtYTMwYWUwNmVkZTZhIiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9">Média</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/resposta/codigoPesquisa">Formulário</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"
+                           href="https://app.powerbi.com/view?r=eyJrIjoiMDk3M2UwYmYtYzNiYi00YzgyLTg2ZjUtYTMwYWUwNmVkZTZhIiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9">Média</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </nav>
-	<div class="area">
-		<ul class="circles">
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
-	</div>
-	<div class="container main-div">
-		<h4 class="titleh2 dv">Cadastro de Pergunta</h4>
+<div class="area">
+    <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
+<div class="container main-div">
+    <h4 class="titleh2 dv">Cadastro de Pergunta</h4>
 
-		<form method="post" style="border:2" action="novaPergunta">
+    <form method="post" style="border:2" action="novaPergunta">
 
-			<div class="alert alert-success collapse dv" role="alert" id="myAlert">
-				<button class="btn-close" data-bs-dismiss="alert"></button>
-				<h4 class="alert-heading">Pergunta cadastrada com sucesso!</h4>
-			</div>
+        <div class="alert alert-success collapse dv" role="alert" id="myAlert">
+            <button class="btn-close" data-bs-dismiss="alert"></button>
+            <h4 class="alert-heading">Pergunta cadastrada com sucesso!</h4>
+        </div>
 
-			<input type="hidden" name="id" th:value="${p?.id}"></input>
-			<p>
-			<div class="mb-3 dv">
-				<label class="lb-legend">Nova Pergunta</label>
-				<input type="text" class="form-control ipt-pergunta"
-					name="textoPergunta" th:value="${p?.textoPergunta}"
-					style="text-transform:uppercase"
-					 required />
-				
-			</div>
+        <input type="hidden" name="id" th:value="${p?.id}"></input>
+        <p>
+        <div class="mb-3 dv">
+            <label class="lb-legend">Nova Pergunta</label>
+            <input type="text" class="form-control ipt-pergunta"
+                   name="textoPergunta" th:value="${p?.textoPergunta}"
+                   style="text-transform:uppercase"
+                   required/>
 
-		
-			
-				<div class="mb-3 dv">
-					<label class="lb-legend">Atrelar a uma Pesquisa? (<i>opcional</i>) </label>
-					<select
-					  name="perguntaExclusao"
-					  class="select2 form-control"
-					  id="idSelect2"
-					  multiple
-					
-					>
-					<option th:each="p:${pesq}" th:text="${p?.turma}" th:value="${p?.id}"></option>
-					</select>
-				  </div>
-				
-			 
-
-			<div class="d-grid gap-2 dv" >
-			<div >
-				<button type="submit" class="btn btn-outline-primary">Cadastrar</button>
-			</div>
-			</div>
+        </div>
 
 
-		</form>
+        <div class="mb-3 dv">
+            <label class="lb-legend">Atrelar a uma Pesquisa? (<i>opcional</i>) </label>
+            <select name="idpesquisa" class="select2 form-control" id="idSelect2" multiple>
+                <option th:each="p:${pesq}" th:text="${p?.turma}" th:value="${p?.id}"></option>
+            </select>
+        </div>
 
-	</div>
 
-	<script type="text/javascript">
+        <div class="d-grid gap-2 dv">
+            <div>
+                <button type="submit" class="btn btn-outline-primary">Cadastrar</button>
+            </div>
+        </div>
+
+
+    </form>
+
+</div>
+
+<script type="text/javascript">
 $(document).ready(function () {
 	var idPerg = [[${idPerg}]];
 	if(idPerg){
 		$('#myAlert').show('fade');
 	}
 });
+
 </script>
 
-	<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-			crossorigin="anonymous">
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous">
 
-	</script>
-	
-	<script src="../../js/selects/select.js"></script>
-	<!--Bootstrap-->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-		crossorigin="anonymous"></script>
-		<link href="path/to/select2.min.css" rel="stylesheet"/>
+</script>
+
+<script src="../../js/selects/select.js"></script>
+<!--Bootstrap-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
+<link href="path/to/select2.min.css" rel="stylesheet"/>
 <script src="path/to/select2.min.js"></script>
 </body>
 
@@ -220,16 +232,17 @@ $(document).ready(function () {
 		width: 100%;
 	}
 
+
 </style>
 <script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-		crossorigin="anonymous"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"
 ></script>
 <script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-		crossorigin="anonymous">
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous">
 
 </script>
 
